# kanbananza

./: .gitignore  CLAUDE.md  DECISIONS.md  PLAN.md  README.md  RELEASE.md  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/agents/: architect.md  docs.md  integrations.md  junior-dev.md  reviewer.md  rust.md  svelte.md  testing.md  ui.md
.claude/commands/: release.md
docs/: agents.md  architecture.md  plan-backlog.md  plan-done.md  ux-improvements-plan.md
docs/superpowers/plans/: 2026-03-22-quick-entry-revamp.md  2026-03-23-tray-revamp.md
scripts/: release.sh
src/: app.css
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_auto_ai.sql  0003_projects.sql  0004_soft_delete.sql  0005_card_time_tracking.sql
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  tray.rs  types.rs
src-tauri/src/ai/: client.rs  mod.rs  prompts.rs
src-tauri/src/commands/: ai.rs  card_time_entries.rs  cards.rs  integrations.rs  keychain.rs  mod.rs  projects.rs  rollover.rs  settings.rs  shell.rs  sync_review.rs  time_entries.rs  tray.rs  weeks.rs
src-tauri/src/integrations/: mod.rs
src-tauri/src/integrations/calendar/: auth.rs  client.rs  mapper.rs  mod.rs
src-tauri/src/integrations/gitlab/: client.rs  mapper.rs  mod.rs
src-tauri/src/integrations/linear/: client.rs  mapper.rs  mod.rs
src-tauri/src/integrations/notion/: client.rs  mapper.rs  mod.rs
src-tauri/src/integrations/slack/: client.rs  mapper.rs
src-tauri/src/tests/: integration.rs
src/lib/: types.ts  utils.ts
src/lib/actions/: portal.ts
src/routes/: +layout.svelte  +page.svelte
src/tests/: setup.ts
(+59 files in other folders)
