[package]
name = "kanbananza"
version = "0.0.0"
description = "Kanbananza - Personal Kanban for daily engineering work"
authors = []
edition = "2024"

[lib]
name = "kanbananza_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-deep-link = "2"
keyring = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
open = "5"
tokio = { version = "1", features = ["net", "io-util", "time"] }
async-openai = "0.27"
log = "0.4"
thiserror = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
